# wasm-quickjs-loader

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.json  wasimake.cmake
.github/workflows/: ci.yml
integration-test/: build.json  package-lock.json  package.json
integration-test/standalone/: entrypoint.ts  tsconfig.json
integration-test/standalone/static/: game.js  index.html  index.js  my_task.js  test.go
integration-test/test/: example.test.ts  tsconfig.json
modules/io/: CMakeLists.txt
modules/io/src/io/: ChannelIOModule.cpp  ChannelIOModule.h  FDChannel.cpp  FDChannel.h  IChannel.h  IIOModule.h
modules/js/: CMakeLists.txt
modules/js/src/js/: DecentralandInterface.cpp  DecentralandInterface.h  JS.cpp  JS.h  JSDebugger.cpp
modules/js/src/js/helper/: Function.h
modules/utils/: CMakeLists.txt
modules/utils/src/utils/: utils.cpp  utils.h
src/: Scene.cpp  Scene.h  entrypoint.cpp  game.cpp  main.cpp
src/io/: ChannelIOModule.cpp  ChannelIOModule.h  FDChannel.cpp  IChannel.h  IIOModule.h
src/protomsg/: test.pb.c  test.pb.h  test.proto
src/scene/: Scene.cpp  Scene.h
